# otimizacao_de_ads_startup

./: .gitignore  README.md  estrategia.md  pyproject.toml
conf/base/: catalog.yml
docs/source/: conf.py  index.rst
notebooks/: 01 - data_understanding.ipynb  02 - data_exploration.ipynb  data_understanding copy.ipynb  data_understanding.ipynb  utils.py
src/otimizacao_de_ads_para_startup/: __init__.py  __main__.py  settings.py
src/otimizacao_de_ads_para_startup/pipelines/data_processing/: nodes.py  pipeline.py
tests/: test_run.py
